--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "react-textarea-autosize": "^8.5.3"
+    "react-textarea-autosize": "^8.5.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
